@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04d: *********************************
 
+BUG: (12/19/05, GVG) 3D Colors were gone since last changes in LayersTab.java
+FIX: Code is back again
+
 IMP: (12/19/05, GVG) Two new Epic preferences in Spice tab.
 
 IMP: (12/16/05, GVG) Small change in EpicOut.java to speed up reading process. This is for Bug#779.
